waybar: update style
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -18,15 +18,15 @@
 
 "modules-right": [
 			//"tray",
-                    	"pulseaudio", 
-			"pulseaudio#source",
-                    	"network", 
-                    	"bluetooth",
-                    	"cpu", 
-                    	"memory", 
-                    	//"temperature", 
-                    	"battery",
-                    	"clock"
+            "pulseaudio",
+            "pulseaudio#source",
+            "network",
+            "bluetooth",
+            //"cpu",
+            //"memory",
+            //"temperature",
+            "battery",
+            "clock"
 ],
  
 }]
