sway: Add shortcut for suspend
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -199,7 +199,11 @@ bar {
 }
 
 # Lock Screen
-bindsym $mod+Shift+s exec ~/.config/sway/screenlock
+bindsym $mod+Shift+a exec ~/.config/sway/screenlock
+
+# Suspend
+bindsym $mod+Shift+s exec systemctl suspend
+
 #Screenshot
 bindsym $mod+Shift+z exec slurp | grim -g - - | wl-copy
 bindsym $mod+Shift+v exec copyq toggle
