sway: add screenlock_and_suspend
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -202,7 +202,7 @@ bar {
 bindsym $mod+Shift+a exec ~/.config/sway/screenlock
 
 # Suspend
-bindsym $mod+Shift+s exec systemctl suspend
+bindsym $mod+Shift+s exec ~/.config/sway/screenlock_and_suspend
 
 #Screenshot
 bindsym $mod+Shift+z exec slurp | grim -g - - | wl-copy
