waybar: toggle input mute on click
Signed-off-by: Julian Ruess <julianonline+github@posteo.de>

--- a/.config/waybar/config-global.jsonc
+++ b/.config/waybar/config-global.jsonc
@@ -169,7 +169,7 @@
     "format": "{volume}",
     "format-source": "",
     "format-source-muted": "",
-    "on-click": "pactl set-source-mute 0 1",
+    "on-click": "pactl set-source-mute 0 toggle",
     "on-click-right": "alacritty pulsemixer",
     "tooltip": false
   },
