--- a/.config/waybar/config-global.jsonc
+++ b/.config/waybar/config-global.jsonc
@@ -49,7 +49,7 @@
     "tooltip-format": "{timeTo}\nPower: {power} Watt"
   },
   "bluetooth": {
-    "format": "󰂯",
+    "format": "",
     "format-connected": "󰂱",
     "format-disabled": "󰂲",
     "format-icons": [
@@ -64,8 +64,6 @@
       "󰥆",
       "󰥈"
     ],
-    "format-off": "󰂲",
-    "format-on": "󰂯",
     "tooltip": "true",
     "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
     "tooltip-format-disabled": "",
