waybar: remove bluetooth audio text
Signed-off-by: Julian Ruess <julianr@linux.ibm.com>

--- a/.config/waybar/config-global.jsonc
+++ b/.config/waybar/config-global.jsonc
@@ -130,8 +130,8 @@
   "pulseaudio": {
     "format": "{icon}",
     "format-muted": "󰖁",
-    "format-bluetooth": "󰗾name subjecto to check",
-    "format-bluetooth-muted": "󰗿 name subject to check",
+    "format-bluetooth": "󰗾",
+    "format-bluetooth-muted": "󰗿",
     "format-icons": {
       "default": [
         "󰕿",
