--- a/.config/sway/config
+++ b/.config/sway/config
@@ -3,6 +3,10 @@
 # Make screensharing work:
 #https://github.com/emersion/xdg-desktop-portal-wlr/wiki/%22It-doesn't-work%22-Troubleshooting-Checklist
 
+#Fedora (dark mode):
+# sudo dnf install gnome-themes-extra
+# Add GTK_THEME=Adwaita-dark to /etc/environment
+
 #openSUSE: libqt5-qtwayland must be installed for QT5 / YAST
 
 #move this block in ~/.config/sway/sway_system_specific
