--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -5,3 +5,9 @@ git:
     signOff: true
 os:
   edit: 'nvim'
+  copyToClipboardCmd: >
+    if [[ "$TERM" =~ ^(screen|tmux) ]]; then
+      printf "\033Ptmux;\033\033]52;c;$(printf {{text}} | base64 -w 0)\a\033\\" > /dev/tty
+    else
+      printf "\033]52;c;$(printf {{text}} | base64 -w 0)\a" > /dev/tty
+    fi
