--- a/.config/sway/config
+++ b/.config/sway/config
@@ -210,7 +210,7 @@ bindsym $mod+Shift+s exec ~/.config/sway/screenlock_and_suspend
 #Screenshot
 bindsym $mod+Shift+z exec slurp | grim -g - - | wl-copy
 bindsym $mod+Shift+v exec copyq toggle
-bindsym $mod+Shift+o exec killall -SIGUSR1 waybar
+bindsym $mod+Shift+w exec killall -SIGUSR1 waybar
 for_window [app_id="copyq"] floating enable, sticky enable, resize set height 600px width 550px, move position cursor, move down 330
 
 for_window [app_id="foot_nmtui"] floating enable, sticky enable, resize set 1000px 700px, move position cursor
